--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ apply plugin: "idea"
 apply plugin: "eclipse"
 
 //archiveBaseName = "properties-plugin"
-version = "1.0.0"
+version = "1.1.0"
 group = "net.saliman"
 archivesBaseName = "gradle-data-extractor-plugin"
 def mavenRepoUploadUrl = "scp://maxdevcloud/var/www/maven/repo"
@@ -22,7 +22,7 @@ configurations {
 }
 
 dependencies {
-	groovy localGroovy()
+	compile localGroovy()
 	compile gradleApi()
 	archives "org.apache.maven.wagon:wagon-ssh:2.2"
 	archives "org.apache.maven.wagon:wagon-ssh-external:2.2"
@@ -42,10 +42,6 @@ task groovydocJar(type: Jar) {
 
 artifacts {
     archives jar, groovydocJar, sourceJar
-}
-
-task wrapper(type: Wrapper) {
-	gradleVersion = '1.0'
 }
 
 uploadArchives {
